syntax = "proto3";

package adventar.v1;

import "google/protobuf/empty.proto";
import "adventar/v1/resources.proto";
import "adventar/v1/rpc_messages.proto";

service Adventar {
  rpc ListCalendars(ListCalendarsRequest) returns (ListCalendarsResponse) {}
  rpc GetCalendar(GetCalendarRequest) returns (GetCalendarResponse) {}
  rpc CreateCalendar(CreateCalendarRequest) returns (Calendar) {}
  rpc UpdateCalendar(UpdateCalendarRequest) returns (Calendar) {}
  rpc DeleteCalendar(DeleteCalendarRequest) returns (google.protobuf.Empty) {}

  rpc ListEntries(ListEntriesRequest) returns (ListEntriesResponse) {}
  rpc CreateEntry(CreateEntryRequest) returns (Entry) {}
  rpc UpdateEntry(UpdateEntryRequest) returns (Entry) {}
  rpc DeleteEntry(DeleteEntryRequest) returns (google.protobuf.Empty) {}

  rpc SignIn(SignInRequest) returns (google.protobuf.Empty) {}
  rpc UpdateUser(UpdateUserRequest) returns (User) {}
}
