syntax = "proto3";

package adventar.v1;

message User {
  int64 id = 1;
  string name = 2;
  string icon_url = 3;
}

message Calendar {
  int64 id = 1;
  User owner = 2;
  string title = 3;
  string description = 4;
  int32 year = 5;
  int32 entry_count = 6;
}

message Entry {
  int64 id = 1;
  User owner = 2;
  Calendar calendar = 3;
  int32 day = 4;
  string comment = 5;
  string url = 6;
  string title = 7;
  string image_url = 8;
}

message CalendarStat {
  int32 year = 1;
  int32 calendars_count = 2;
  int32 entries_count = 3;
}
